[package]
name = "basic_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.218"
tokio = { version = "1.43.0", features = ["full"] }
